--- a/MO.SystemInvader/MO.SystemInvader.csproj
+++ b/MO.SystemInvader/MO.SystemInvader.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Enemy.cs" />
     <Compile Include="Level.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tower.cs" />
