--- a/MO.SystemInvader/MO.SystemInvader.csproj
+++ b/MO.SystemInvader/MO.SystemInvader.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Random.cs" />
     <Compile Include="Tower.cs" />
     <Compile Include="TowerShop.cs" />
     <Compile Include="Wave.cs" />
